--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-player": "^2.14.1"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
